--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,15 @@
   <app-toolbar></app-toolbar>  
   <router-outlet></router-outlet>
 </div>
+<!-- 
+<div fullscreen>
+  <div fxHide fxShow.gt-sm>
+    <app-toolbar></app-toolbar>
+  </div>
+  <div fxShow fxHide.gt-sm>
+    <app-sidenav></app-sidenav>
+  </div>
+
+  <router-outlet></router-outlet>
+  
+</div> -->
