--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div fullscreen fxLayout="column" fxLayoutGap="5px">
   <app-toolbar></app-toolbar>  
   <router-outlet></router-outlet>
 </div>
-<!-- 
-<div fullscreen>
-  <div fxHide fxShow.gt-sm>
-    <app-toolbar></app-toolbar>
-  </div>
-  <div fxShow fxHide.gt-sm>
-    <app-sidenav></app-sidenav>
-  </div>
-
-  <router-outlet></router-outlet>
-  
-</div> -->
