--- a/src/app/components/pacientes/pacientes.component.html
+++ b/src/app/components/pacientes/pacientes.component.html
@@ -4,23 +4,37 @@
   </div>
   <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="15px">
     <mat-card *ngFor="let p of todosLosPacientes | async" #value>
-      <mat-card-header>
+      <mat-card-header fxLayout="row" fxLayoutAlign="center center">
         <div mat-card-avatar>
           <mat-icon>accessibility</mat-icon>
         </div>
-        <mat-card-title class="mat-headline"> 
-          {{ p.apellido | uppercase }}, {{ p.nombre | uppercase }} 
+        <mat-card-title> 
+          <strong>{{ p.apellido | uppercase }}, {{ p.nombre | uppercase }}</strong>
         </mat-card-title>
-        <mat-card-subtitle>{{ p.talla }} cm., {{ p.peso_actual }} kg., IMC: {{ p.imc | number:'1.1-2'}}(Contextura <strong>{{ p.biotipo }}</strong>)</mat-card-subtitle>
+        <mat-card-subtitle>{{ p.talla }} cm., {{ p.peso_actual }} kg., IMC: {{ p.imc | number:'1.1-2'}}(Contextura <b>{{ p.biotipo }}</b>)</mat-card-subtitle>
       </mat-card-header>
-      <mat-card-content>
-        <p>El paciente cuenta con un peso habitual de <strong>{{ p.peso_habitual | number:'1.1-2' }} kg.</strong>, su peso ajustado <strong>{{ p.peso_ajusta
-          | number:'1.1-2' }} kg.</strong> o un peso saludable de <strong>{{ p.peso_saludable | number:'1.1-1' }} kg.</strong> y con un porcentaje de peso
-          ideal igual a <strong>{{ p.porcentaje_peso_ideal | number:'1.1-2' }}%</strong>.
-        </p>
-        <table>
-          <button mat-button color="primary" (click)="verDetallesPaciente(p.codigo_paciente)">Toda la informacion...</button>
-        </table>
+      <mat-card-content fxLayout="column">
+        <div fxHide fxShow.gt-sm>
+          <div>
+            <b>Peso habitual: </b>{{ p.peso_habitual | number:'1.1-2' }} kg.
+            <b>Peso ajustado: </b>{{ p.peso_ajusta | number:'1.1-2' }} kg.
+          </div>
+          <div>
+            <b>Peso saludable: </b>{{ p.peso_saludable | number:'1.1-1' }} kg. 
+            <b>Porcentaje de peso ideal: </b>{{ p.porcentaje_peso_ideal | number:'1.1-2' }}%.
+          </div>
+        </div>
+        <div fxShow fxHide.gt-sm>
+          <div>
+            <b>P.Habit.: </b>{{ p.peso_habitual | number:'1.1-2' }}kg.
+            <b>P.Ajust.: </b>{{ p.peso_ajusta | number:'1.1-2' }}kg.
+          </div>
+          <div>
+            <b>P.Salud: </b>{{ p.peso_saludable | number:'1.1-1' }}kg. 
+            <b>% P.I.: </b>{{ p.porcentaje_peso_ideal | number:'1.1-2' }}%.
+          </div>
+        </div>
+        <button mat-button color="accent" (click)="verDetallesPaciente(p.codigo_paciente)">Toda la informacion...</button>
       </mat-card-content>
       <mat-card-footer>
         <small class="texto-claro">Ultima dieta creada: dd/MM/aaaa</small>
