--- a/src/app/components/pacientes/pacientes.component.html
+++ b/src/app/components/pacientes/pacientes.component.html
@@ -37,7 +37,7 @@
         <button mat-button color="accent" (click)="verDetallesPaciente(p.codigo_paciente)">Toda la informacion...</button>
       </mat-card-content>
       <mat-card-footer> 
-        <small class="texto-claro">Ultima dieta creada: dd/MM/aaaa</small>
+        <small>Ultima dieta creada: dd/MM/aaaa</small>
       </mat-card-footer>
     </mat-card>
   </div>
