--- a/src/app/components/pacientes/pacientes.component.html
+++ b/src/app/components/pacientes/pacientes.component.html
@@ -21,7 +21,7 @@
           </div>
           <div>
             <b>Peso saludable: </b>{{ p.peso_saludable | number:'1.1-1' }} kg. 
-            <b>Porcentaje de peso ideal: </b>{{ p.porcentaje_peso_ideal | number:'1.1-2' }}%.
+            <b>% de P.I.: </b>{{ p.porcentaje_peso_ideal | number:'1.1-2' }}%.
           </div>
         </div>
         <div fxShow fxHide.gt-sm>
